--- a/index.html
+++ b/index.html
@@ -1,10 +1,67 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>YouTube Stats</title>
   <style>
-    body { font-family: sans-serif; text-align: center; padding: 2rem; }
+    /* Apple-ähnliches Design: Sanfte Farben, viel Weißraum, klare Schrift */
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+      background-color: #f9f9f9;
+      color: #1d1d1f;
+      margin: 0;
+      padding: 2rem;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+    }
+
+    h1 {
+      font-weight: 600;
+      font-size: 2.5rem;
+      margin-bottom: 1.5rem;
+    }
+
+    #stats {
+      background: #fff;
+      padding: 2rem 3rem;
+      border-radius: 16px;
+      box-shadow: 0 8px 24px rgb(0 0 0 / 0.12);
+      width: 320px;
+    }
+
+    #stats p {
+      font-size: 1.125rem;
+      margin: 1rem 0;
+    }
+
+    strong {
+      font-weight: 600;
+      color: #636366;
+    }
+
+    .goal {
+      margin-top: 1rem;
+      font-size: 1rem;
+      font-style: italic;
+      color: #007aff; /* Apple Blue */
+    }
+
+    footer {
+      position: fixed;
+      right: 1rem;
+      bottom: 1rem;
+      font-size: 0.875rem;
+      color: #8e8e93;
+      font-weight: 500;
+      user-select: none;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    }
   </style>
 </head>
 <body>
@@ -13,7 +70,10 @@
     <p><strong>Kanal:</strong> <span id="channelTitle">...</span></p>
     <p><strong>Abonnenten:</strong> <span id="subscriberCount">...</span></p>
     <p><strong>Gesamt-Views:</strong> <span id="viewCount">...</span></p>
+    <p class="goal" id="goalText"></p>
   </div>
+
+  <footer>developed by Jakob</footer>
 
   <script>
     const apiKey = 'AIzaSyAVXXKVyZu2mk38HoKZlyehPimjfDGQBaw';
@@ -23,12 +83,29 @@
       const url = `https://www.googleapis.com/youtube/v3/channels?part=statistics,snippet&id=${channelId}&key=${apiKey}`;
       const response = await fetch(url);
       const data = await response.json();
+
+      if (!data.items || data.items.length === 0) {
+        document.getElementById('channelTitle').textContent = "Kanal nicht gefunden";
+        return;
+      }
+
       const stats = data.items[0].statistics;
       const snippet = data.items[0].snippet;
 
       document.getElementById('channelTitle').textContent = snippet.title;
-      document.getElementById('subscriberCount').textContent = stats.subscriberCount;
-      document.getElementById('viewCount').textContent = stats.viewCount;
+      const subs = parseInt(stats.subscriberCount, 10);
+      document.getElementById('subscriberCount').textContent = subs.toLocaleString('de-DE');
+      document.getElementById('viewCount').textContent = parseInt(stats.viewCount, 10).toLocaleString('de-DE');
+
+      // Berechnung Ziel in Zehnerschritten
+      const nextGoal = Math.ceil(subs / 10) * 10;
+      const remaining = nextGoal - subs;
+
+      const goalText = remaining > 0 
+        ? `${remaining} noch bis ${nextGoal}` 
+        : `Herzlichen Glückwunsch! ${subs} erreicht!`;
+
+      document.getElementById('goalText').textContent = goalText;
     }
 
     loadStats();
