--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <title>YouTube Stats</title>
   <style>
-    /* Apple-ähnliches Design: Sanfte Farben, viel Weißraum, klare Schrift */
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
         Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -18,6 +17,7 @@
       align-items: center;
       justify-content: center;
       text-align: center;
+      overflow: hidden; /* Verhindert Scrollen beim Overlay */
     }
 
     h1 {
@@ -32,6 +32,14 @@
       border-radius: 16px;
       box-shadow: 0 8px 24px rgb(0 0 0 / 0.12);
       width: 320px;
+      opacity: 0;
+      transition: opacity 0.8s ease;
+      pointer-events: none; /* Nicht anklickbar solange versteckt */
+    }
+
+    #stats.visible {
+      opacity: 1;
+      pointer-events: auto;
     }
 
     #stats p {
@@ -48,7 +56,7 @@
       margin-top: 1rem;
       font-size: 1rem;
       font-style: italic;
-      color: #007aff; /* Apple Blue */
+      color: #007aff;
     }
 
     footer {
@@ -62,15 +70,57 @@
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
         Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     }
+
+    button {
+      margin-top: 1rem;
+      padding: 0.5rem 1.2rem;
+      font-size: 1rem;
+      border: none;
+      border-radius: 10px;
+      background-color: #007aff;
+      color: white;
+      cursor: pointer;
+      font-weight: 600;
+      transition: background-color 0.3s ease;
+    }
+
+    button:hover {
+      background-color: #005bb5;
+    }
+
+    /* Begrüßungs-Overlay */
+    #welcomeOverlay {
+      position: fixed;
+      inset: 0;
+      background: #007aff;
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 3rem;
+      font-weight: 700;
+      z-index: 9999;
+      opacity: 1;
+      transition: opacity 1s ease;
+      user-select: none;
+    }
+
+    #welcomeOverlay.fade-out {
+      opacity: 0;
+      pointer-events: none;
+    }
   </style>
 </head>
 <body>
+  <div id="welcomeOverlay">Hallo, Willkommen</div>
+
   <h1>YouTube Kanal-Stats</h1>
   <div id="stats">
     <p><strong>Kanal:</strong> <span id="channelTitle">...</span></p>
     <p><strong>Abonnenten:</strong> <span id="subscriberCount">...</span></p>
     <p><strong>Gesamt-Views:</strong> <span id="viewCount">...</span></p>
     <p class="goal" id="goalText"></p>
+    <button id="refreshBtn">Aktualisieren</button>
   </div>
 
   <footer>developed by Jakob</footer>
@@ -78,6 +128,9 @@
   <script>
     const apiKey = 'AIzaSyAVXXKVyZu2mk38HoKZlyehPimjfDGQBaw';
     const channelId = 'UC419XwNMLkI5KmVCo9sRPQg';
+
+    const welcomeOverlay = document.getElementById('welcomeOverlay');
+    const statsDiv = document.getElementById('stats');
 
     async function loadStats() {
       const url = `https://www.googleapis.com/youtube/v3/channels?part=statistics,snippet&id=${channelId}&key=${apiKey}`;
@@ -97,7 +150,6 @@
       document.getElementById('subscriberCount').textContent = subs.toLocaleString('de-DE');
       document.getElementById('viewCount').textContent = parseInt(stats.viewCount, 10).toLocaleString('de-DE');
 
-      // Berechnung Ziel in Zehnerschritten
       const nextGoal = Math.ceil(subs / 10) * 10;
       const remaining = nextGoal - subs;
 
@@ -108,7 +160,21 @@
       document.getElementById('goalText').textContent = goalText;
     }
 
-    loadStats();
+    document.getElementById('refreshBtn').addEventListener('click', loadStats);
+
+    // Begrüßung anzeigen, dann ausblenden und Stats sichtbar machen
+    window.addEventListener('load', () => {
+      setTimeout(() => {
+        welcomeOverlay.classList.add('fade-out');
+
+        // Nach der Fade-Out Dauer (1s) das Overlay entfernen und Stats zeigen
+        setTimeout(() => {
+          welcomeOverlay.style.display = 'none';
+          statsDiv.classList.add('visible');
+          loadStats();
+        }, 1000);
+      }, 3000); // 3 Sekunden Begrüßung sichtbar
+    });
   </script>
 </body>
 </html>
