--- a/index.html
+++ b/index.html
@@ -4,52 +4,64 @@
   <meta charset="UTF-8" />
   <title>YouTube Stats</title>
   <style>
+    /* Grundstyle */
     body {
+      margin: 0;
+      height: 100vh;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
         Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-      background-color: #f9f9f9;
-      color: #1d1d1f;
-      margin: 0;
-      padding: 2rem;
+      background-color: #000;
+      color: #fff;
       display: flex;
       flex-direction: column;
-      min-height: 100vh;
       align-items: center;
       justify-content: center;
-      text-align: center;
-      overflow: hidden; /* Verhindert Scrollen beim Overlay */
+      overflow: hidden;
+      position: relative;
+      user-select: none;
     }
 
     h1 {
       font-weight: 600;
       font-size: 2.5rem;
       margin-bottom: 1.5rem;
+      z-index: 10;
     }
 
+    /* Stats Container */
     #stats {
-      background: #fff;
+      background: #111;
       padding: 2rem 3rem;
       border-radius: 16px;
-      box-shadow: 0 8px 24px rgb(0 0 0 / 0.12);
-      width: 320px;
-      opacity: 0;
-      transition: opacity 0.8s ease;
-      pointer-events: none; /* Nicht anklickbar solange versteckt */
+      box-shadow: 0 8px 24px rgb(0 0 255 / 0.3);
+      width: 360px;
+      transition: 
+        box-shadow 0.3s ease,
+        transform 0.3s ease,
+        background-color 0.3s ease,
+        color 0.3s ease;
+      cursor: default;
+      position: relative;
+      z-index: 10;
+      text-align: center;
     }
 
-    #stats.visible {
-      opacity: 1;
-      pointer-events: auto;
+    #stats:hover {
+      background-color: #fff;
+      color: #000;
+      box-shadow: 0 0 15px 3px #007aff;
+      transform: translateY(-10px);
     }
 
     #stats p {
       font-size: 1.125rem;
       margin: 1rem 0;
+      transition: color 0.3s ease;
     }
 
     strong {
       font-weight: 600;
-      color: #636366;
+      color: inherit;
     }
 
     .goal {
@@ -57,70 +69,132 @@
       font-size: 1rem;
       font-style: italic;
       color: #007aff;
+      transition: color 0.3s ease;
     }
 
+    /* Buttons Container */
+    .buttons {
+      margin-top: 1.5rem;
+      display: flex;
+      justify-content: center;
+      gap: 1rem;
+    }
+
+    /* Allgemeine Button Styles */
+    button {
+      padding: 0.5rem 1.5rem;
+      font-size: 1rem;
+      border-radius: 10px;
+      font-weight: 600;
+      cursor: pointer;
+      border: none;
+      transition: all 0.3s ease;
+      user-select: none;
+      box-shadow: none;
+    }
+
+    /* Aktualisieren-Button */
+    #refreshBtn {
+      background-color: #007aff;
+      color: white;
+      border: none;
+    }
+
+    #refreshBtn:hover {
+      background-color: #005bb5;
+    }
+
+    /* Kanal-Link Button mit pulsierendem Umriss */
+    #channelLinkBtn {
+      background-color: transparent;
+      color: #007aff;
+      border: 2.5px solid #007aff;
+      position: relative;
+      overflow: hidden;
+    }
+
+    #channelLinkBtn:hover {
+      color: #004a99;
+      border-color: #004a99;
+      box-shadow: 0 0 8px 2px #007aff;
+      animation: pulseGlow 1.5s infinite;
+    }
+
+    /* Pulsierender Umriss */
+    @keyframes pulseGlow {
+      0% {
+        box-shadow: 0 0 8px 2px #007aff;
+      }
+      50% {
+        box-shadow: 0 0 16px 5px #007aff;
+      }
+      100% {
+        box-shadow: 0 0 8px 2px #007aff;
+      }
+    }
+
+    /* Footer */
     footer {
       position: fixed;
       right: 1rem;
       bottom: 1rem;
       font-size: 0.875rem;
-      color: #8e8e93;
+      color: #555;
       font-weight: 500;
       user-select: none;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
         Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    }
-
-    button {
-      margin-top: 1rem;
-      padding: 0.5rem 1.2rem;
-      font-size: 1rem;
-      border: none;
-      border-radius: 10px;
-      background-color: #007aff;
-      color: white;
-      cursor: pointer;
-      font-weight: 600;
-      transition: background-color 0.3s ease;
-    }
-
-    button:hover {
-      background-color: #005bb5;
-    }
-
-    /* Begrüßungs-Overlay */
-    #welcomeOverlay {
-      position: fixed;
-      inset: 0;
-      background: #007aff;
-      color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 3rem;
-      font-weight: 700;
-      z-index: 9999;
-      opacity: 1;
-      transition: opacity 1s ease;
-      user-select: none;
-    }
-
-    #welcomeOverlay.fade-out {
-      opacity: 0;
+      z-index: 5;
       pointer-events: none;
     }
+
+    /* Background Text "developed by Jakob" Animation */
+    .bg-text {
+      position: fixed;
+      color: rgba(0, 122, 255, 0.05);
+      font-size: 3rem;
+      font-weight: 700;
+      user-select: none;
+      pointer-events: none;
+      animation: fadeMove 8s linear infinite;
+      white-space: nowrap;
+      z-index: 1;
+    }
+
+    /* Animation für Background Text */
+    @keyframes fadeMove {
+      0% {
+        opacity: 0;
+        transform: translate(100vw, 0) scale(1);
+      }
+      10% {
+        opacity: 0.1;
+      }
+      50% {
+        opacity: 0.05;
+      }
+      90% {
+        opacity: 0;
+        transform: translate(-100vw, 0) scale(1);
+      }
+      100% {
+        opacity: 0;
+      }
+    }
+
   </style>
 </head>
 <body>
-  <div id="welcomeOverlay">Hallo, Willkommen</div>
-
   <h1>YouTube Kanal-Stats</h1>
   <div id="stats">
     <p><strong>Kanal:</strong> <span id="channelTitle">...</span></p>
     <p><strong>Abonnenten:</strong> <span id="subscriberCount">...</span></p>
     <p><strong>Gesamt-Views:</strong> <span id="viewCount">...</span></p>
     <p class="goal" id="goalText"></p>
-    <button id="refreshBtn">Aktualisieren</button>
+    <div class="buttons">
+      <button id="refreshBtn">Aktualisieren</button>
+      <button id="channelLinkBtn" title="Zum Kanal öffnen">Zum Kanal</button>
+    </div>
   </div>
 
   <footer>developed by Jakob</footer>
@@ -129,8 +203,9 @@
     const apiKey = 'AIzaSyAVXXKVyZu2mk38HoKZlyehPimjfDGQBaw';
     const channelId = 'UC419XwNMLkI5KmVCo9sRPQg';
 
-    const welcomeOverlay = document.getElementById('welcomeOverlay');
     const statsDiv = document.getElementById('stats');
+    const refreshBtn = document.getElementById('refreshBtn');
+    const channelLinkBtn = document.getElementById('channelLinkBtn');
 
     async function loadStats() {
       const url = `https://www.googleapis.com/youtube/v3/channels?part=statistics,snippet&id=${channelId}&key=${apiKey}`;
@@ -150,31 +225,55 @@
       document.getElementById('subscriberCount').textContent = subs.toLocaleString('de-DE');
       document.getElementById('viewCount').textContent = parseInt(stats.viewCount, 10).toLocaleString('de-DE');
 
+      // Vollständiger Satz für Abo-Ziel
       const nextGoal = Math.ceil(subs / 10) * 10;
       const remaining = nextGoal - subs;
 
       const goalText = remaining > 0 
-        ? `${remaining} noch bis ${nextGoal}` 
-        : `Herzlichen Glückwunsch! ${subs} erreicht!`;
+        ? `Es fehlen noch ${remaining} Abonnent${remaining > 1 ? 'en' : ''}, um ${nextGoal} zu erreichen.` 
+        : `Herzlichen Glückwunsch! Du hast ${subs} Abonnent${subs > 1 ? 'en' : ''} erreicht!`;
 
       document.getElementById('goalText').textContent = goalText;
+
+      // Kanal-Link Button URL setzen
+      channelLinkBtn.onclick = () => {
+        window.open(`https://www.youtube.com/channel/${channelId}`, '_blank');
+      };
     }
 
-    document.getElementById('refreshBtn').addEventListener('click', loadStats);
+    refreshBtn.addEventListener('click', loadStats);
 
-    // Begrüßung anzeigen, dann ausblenden und Stats sichtbar machen
-    window.addEventListener('load', () => {
+    // Initial laden
+    loadStats();
+
+    // Hintergrundtexte "developed by Jakob" random einfügen und animieren
+    function createBgText() {
+      const bgText = document.createElement('div');
+      bgText.className = 'bg-text';
+      bgText.textContent = 'developed by Jakob';
+
+      // Zufällige Höhe zwischen 5% und 90% vom Viewport
+      const top = Math.random() * 85 + 5;
+      bgText.style.top = `${top}vh`;
+
+      // Zufällige Animationsdauer 6-12 Sekunden
+      const duration = Math.random() * 6 + 6;
+      bgText.style.animationDuration = `${duration}s`;
+
+      // Zufällige Schriftgröße 2-4 rem
+      const size = Math.random() * 2 + 2;
+      bgText.style.fontSize = `${size}rem`;
+
+      document.body.appendChild(bgText);
+
+      // Nach Animationsende entfernen
       setTimeout(() => {
-        welcomeOverlay.classList.add('fade-out');
+        bgText.remove();
+      }, duration * 1000);
+    }
 
-        // Nach der Fade-Out Dauer (1s) das Overlay entfernen und Stats zeigen
-        setTimeout(() => {
-          welcomeOverlay.style.display = 'none';
-          statsDiv.classList.add('visible');
-          loadStats();
-        }, 1000);
-      }, 3000); // 3 Sekunden Begrüßung sichtbar
-    });
+    // Alle 1.5 Sekunden ein neuer bg-text
+    setInterval(createBgText, 1500);
   </script>
 </body>
 </html>
