--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <title>YouTube Stats</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     /* Grundstyle */
     body {
       margin: 0;
-      height: 100vh;
+      min-height: 100vh;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
         Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
       background-color: #000;
@@ -19,6 +20,8 @@
       overflow: hidden;
       position: relative;
       user-select: none;
+      padding: 1rem;
+      box-sizing: border-box;
     }
 
     h1 {
@@ -26,15 +29,17 @@
       font-size: 2.5rem;
       margin-bottom: 1.5rem;
       z-index: 10;
+      text-align: center;
     }
 
     /* Stats Container */
     #stats {
       background: #111;
-      padding: 2rem 3rem;
+      padding: 2rem 2.5rem;
       border-radius: 16px;
       box-shadow: 0 8px 24px rgb(0 0 255 / 0.3);
-      width: 360px;
+      max-width: 400px;
+      width: 100%;
       transition: 
         box-shadow 0.3s ease,
         transform 0.3s ease,
@@ -44,19 +49,21 @@
       position: relative;
       z-index: 10;
       text-align: center;
+      user-select: text;
     }
 
     #stats:hover {
       background-color: #fff;
       color: #000;
-      box-shadow: 0 0 15px 3px #007aff;
-      transform: translateY(-10px);
+      box-shadow: 0 0 30px 6px #007aff;
+      transform: translateY(-15px);
     }
 
     #stats p {
       font-size: 1.125rem;
       margin: 1rem 0;
       transition: color 0.3s ease;
+      word-wrap: break-word;
     }
 
     strong {
@@ -78,19 +85,21 @@
       display: flex;
       justify-content: center;
       gap: 1rem;
+      flex-wrap: wrap;
     }
 
     /* Allgemeine Button Styles */
     button {
-      padding: 0.5rem 1.5rem;
-      font-size: 1rem;
-      border-radius: 10px;
-      font-weight: 600;
+      padding: 0.65rem 2rem;
+      font-size: 1.1rem;
+      border-radius: 12px;
+      font-weight: 700;
       cursor: pointer;
       border: none;
-      transition: all 0.3s ease;
+      transition: all 0.35s ease;
       user-select: none;
       box-shadow: none;
+      min-width: 140px;
     }
 
     /* Aktualisieren-Button */
@@ -98,38 +107,51 @@
       background-color: #007aff;
       color: white;
       border: none;
+      box-shadow: 0 0 10px #007aff88;
     }
 
     #refreshBtn:hover {
       background-color: #005bb5;
+      box-shadow: 0 0 20px #005bb5cc;
     }
 
-    /* Kanal-Link Button mit pulsierendem Umriss */
+    /* Kanal-Link Button mit starkem, animiertem Farbverlauf-Glow */
     #channelLinkBtn {
       background-color: transparent;
       color: #007aff;
-      border: 2.5px solid #007aff;
+      border: 3px solid #007aff;
       position: relative;
       overflow: hidden;
+      box-shadow: 0 0 15px #007aff99;
+    }
+
+    #channelLinkBtn::before {
+      content: "";
+      position: absolute;
+      top: -50%;
+      left: -50%;
+      width: 200%;
+      height: 200%;
+      background: linear-gradient(270deg, #007aff, #00e0ff, #007aff);
+      animation: rainbowGlow 2.5s linear infinite;
+      filter: blur(8px);
+      opacity: 0.7;
+      border-radius: 14px;
+      z-index: -1;
     }
 
     #channelLinkBtn:hover {
-      color: #004a99;
-      border-color: #004a99;
-      box-shadow: 0 0 8px 2px #007aff;
-      animation: pulseGlow 1.5s infinite;
+      color: #00e0ff;
+      border-color: #00e0ff;
+      box-shadow: 0 0 25px 6px #00e0ff;
     }
 
-    /* Pulsierender Umriss */
-    @keyframes pulseGlow {
+    @keyframes rainbowGlow {
       0% {
-        box-shadow: 0 0 8px 2px #007aff;
-      }
-      50% {
-        box-shadow: 0 0 16px 5px #007aff;
+        background-position: 0% 50%;
       }
       100% {
-        box-shadow: 0 0 8px 2px #007aff;
+        background-position: 200% 50%;
       }
     }
 
@@ -151,37 +173,57 @@
     /* Background Text "developed by Jakob" Animation */
     .bg-text {
       position: fixed;
-      color: rgba(0, 122, 255, 0.05);
-      font-size: 3rem;
+      color: rgba(0, 122, 255, 0.07);
       font-weight: 700;
       user-select: none;
       pointer-events: none;
-      animation: fadeMove 8s linear infinite;
+      animation: fadeMove 10s linear infinite;
       white-space: nowrap;
       z-index: 1;
+      text-shadow: 0 0 8px rgba(0, 122, 255, 0.2);
     }
 
     /* Animation für Background Text */
     @keyframes fadeMove {
       0% {
         opacity: 0;
-        transform: translate(100vw, 0) scale(1);
+        transform: translateX(100vw) scale(1);
       }
       10% {
-        opacity: 0.1;
+        opacity: 0.15;
       }
       50% {
-        opacity: 0.05;
+        opacity: 0.07;
       }
       90% {
         opacity: 0;
-        transform: translate(-100vw, 0) scale(1);
+        transform: translateX(-100vw) scale(1);
       }
       100% {
         opacity: 0;
       }
     }
 
+    /* Responsive Schriftgrößen */
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 1.8rem;
+      }
+      #stats p {
+        font-size: 1rem;
+      }
+      .goal {
+        font-size: 0.9rem;
+      }
+      button {
+        font-size: 1rem;
+        min-width: 120px;
+        padding: 0.55rem 1.5rem;
+      }
+      .bg-text {
+        font-size: 2rem !important;
+      }
+    }
   </style>
 </head>
 <body>
@@ -203,42 +245,46 @@
     const apiKey = 'AIzaSyAVXXKVyZu2mk38HoKZlyehPimjfDGQBaw';
     const channelId = 'UC419XwNMLkI5KmVCo9sRPQg';
 
-    const statsDiv = document.getElementById('stats');
     const refreshBtn = document.getElementById('refreshBtn');
     const channelLinkBtn = document.getElementById('channelLinkBtn');
 
     async function loadStats() {
-      const url = `https://www.googleapis.com/youtube/v3/channels?part=statistics,snippet&id=${channelId}&key=${apiKey}`;
-      const response = await fetch(url);
-      const data = await response.json();
+      try {
+        const url = `https://www.googleapis.com/youtube/v3/channels?part=statistics,snippet&id=${channelId}&key=${apiKey}`;
+        const response = await fetch(url);
+        const data = await response.json();
 
-      if (!data.items || data.items.length === 0) {
-        document.getElementById('channelTitle').textContent = "Kanal nicht gefunden";
-        return;
+        if (!data.items || data.items.length === 0) {
+          document.getElementById('channelTitle').textContent = "Kanal nicht gefunden";
+          return;
+        }
+
+        const stats = data.items[0].statistics;
+        const snippet = data.items[0].snippet;
+
+        document.getElementById('channelTitle').textContent = snippet.title;
+        const subs = parseInt(stats.subscriberCount, 10);
+        document.getElementById('subscriberCount').textContent = subs.toLocaleString('de-DE');
+        document.getElementById('viewCount').textContent = parseInt(stats.viewCount, 10).toLocaleString('de-DE');
+
+        // Vollständiger Satz für Abo-Ziel
+        const nextGoal = Math.ceil(subs / 10) * 10;
+        const remaining = nextGoal - subs;
+
+        const goalText = remaining > 0 
+          ? `Es fehlen noch ${remaining} Abonnent${remaining > 1 ? 'en' : ''}, um ${nextGoal} zu erreichen.` 
+          : `Herzlichen Glückwunsch! Du hast ${subs} Abonnent${subs > 1 ? 'en' : ''} erreicht!`;
+
+        document.getElementById('goalText').textContent = goalText;
+
+        // Kanal-Link Button URL setzen
+        channelLinkBtn.onclick = () => {
+          window.open(`https://www.youtube.com/channel/${channelId}`, '_blank');
+        };
+      } catch (e) {
+        console.error("Fehler beim Laden der Daten:", e);
+        document.getElementById('channelTitle').textContent = "Fehler beim Laden";
       }
-
-      const stats = data.items[0].statistics;
-      const snippet = data.items[0].snippet;
-
-      document.getElementById('channelTitle').textContent = snippet.title;
-      const subs = parseInt(stats.subscriberCount, 10);
-      document.getElementById('subscriberCount').textContent = subs.toLocaleString('de-DE');
-      document.getElementById('viewCount').textContent = parseInt(stats.viewCount, 10).toLocaleString('de-DE');
-
-      // Vollständiger Satz für Abo-Ziel
-      const nextGoal = Math.ceil(subs / 10) * 10;
-      const remaining = nextGoal - subs;
-
-      const goalText = remaining > 0 
-        ? `Es fehlen noch ${remaining} Abonnent${remaining > 1 ? 'en' : ''}, um ${nextGoal} zu erreichen.` 
-        : `Herzlichen Glückwunsch! Du hast ${subs} Abonnent${subs > 1 ? 'en' : ''} erreicht!`;
-
-      document.getElementById('goalText').textContent = goalText;
-
-      // Kanal-Link Button URL setzen
-      channelLinkBtn.onclick = () => {
-        window.open(`https://www.youtube.com/channel/${channelId}`, '_blank');
-      };
     }
 
     refreshBtn.addEventListener('click', loadStats);
@@ -256,8 +302,8 @@
       const top = Math.random() * 85 + 5;
       bgText.style.top = `${top}vh`;
 
-      // Zufällige Animationsdauer 6-12 Sekunden
-      const duration = Math.random() * 6 + 6;
+      // Zufällige Animationsdauer 7-13 Sekunden
+      const duration = Math.random() * 6 + 7;
       bgText.style.animationDuration = `${duration}s`;
 
       // Zufällige Schriftgröße 2-4 rem
@@ -272,8 +318,8 @@
       }, duration * 1000);
     }
 
-    // Alle 1.5 Sekunden ein neuer bg-text
-    setInterval(createBgText, 1500);
+    // Alle 1.3 Sekunden ein neuer bg-text
+    setInterval(createBgText, 1300);
   </script>
 </body>
 </html>
