--- a/index.html
+++ b/index.html
@@ -5,19 +5,15 @@
   <title>YouTube Stats</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    /* Schrift glätten für alle Browser */
-    body {
+    html, body {
       margin: 0;
       padding: 0;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, "Helvetica Neue", sans-serif;
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
-      background-color: #000;
-      color: #fff;
       overflow-x: hidden;
+      background-color: #000;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+      color: #fff;
     }
 
-    /* Begrüßung */
     #welcome {
       position: fixed;
       width: 100%;
@@ -32,19 +28,9 @@
     }
 
     @keyframes fallAway {
-      0% {
-        opacity: 1;
-        transform: translateY(0);
-      }
-      80% {
-        opacity: 0.8;
-        transform: translateY(100px) rotateX(30deg) scale(0.95);
-      }
-      100% {
-        opacity: 0;
-        transform: translateY(-200vh) rotateX(80deg) scale(0);
-        display: none;
-      }
+      0% { opacity: 1; transform: translateY(0); }
+      80% { opacity: 0.8; transform: translateY(100px) rotateX(30deg) scale(0.95); }
+      100% { opacity: 0; transform: translateY(-200vh) rotateX(80deg) scale(0); display: none; }
     }
 
     h1 {
@@ -60,15 +46,15 @@
       padding: 2rem;
       border-radius: 16px;
       text-align: center;
-      box-shadow: 0 8px 24px rgb(0 0 255 / 0.3);
-      transition: all 0.3s ease;
+      position: relative;
+      box-shadow: 0 0 20px #007aff88;
+      animation: glowBorder 6s linear infinite;
     }
 
-    #stats:hover {
-      background-color: #fff;
-      color: #000;
-      box-shadow: 0 0 30px 6px #007aff;
-      transform: translateY(-10px);
+    @keyframes glowBorder {
+      0% { box-shadow: 0 0 15px #007aff88; }
+      50% { box-shadow: 0 0 30px #007aff; }
+      100% { box-shadow: 0 0 15px #007aff88; }
     }
 
     #stats p {
@@ -76,7 +62,7 @@
     }
 
     .goal {
-      color: #007aff;
+      color: #00c3ff;
       font-style: italic;
     }
 
@@ -143,14 +129,13 @@
       z-index: 10;
     }
 
-    /* Schneeflocken */
     .snowflake {
       position: fixed;
-      color: white;
-      user-select: none;
       pointer-events: none;
-      font-size: 1rem;
       z-index: 0;
+      font-size: 1rem;
+      user-select: none;
+      color: white;
     }
   </style>
 </head>
@@ -200,8 +185,8 @@
 
         const nextGoal = Math.ceil(subs / 10) * 10;
         const remaining = nextGoal - subs;
-        document.getElementById('goalText').textContent = 
-          remaining > 0 
+        document.getElementById('goalText').textContent =
+          remaining > 0
             ? `Es fehlen noch ${remaining} Abonnent${remaining > 1 ? 'en' : ''} bis ${nextGoal}.`
             : `Ziel erreicht mit ${subs} Abonnenten!`;
 
@@ -227,25 +212,45 @@
     document.getElementById('refreshBtn').addEventListener('click', loadStats);
     loadStats();
 
-    // Schneeflocken folgen der Maus
-    document.addEventListener('mousemove', (e) => {
+    // Schneeflocken dauerhaft & mit Mausbewegung beeinflusst
+    let mouseX = window.innerWidth / 2;
+
+    document.addEventListener('mousemove', e => {
+      mouseX = e.clientX;
+    });
+
+    function createSnowflake() {
       const flake = document.createElement('div');
       flake.className = 'snowflake';
-      flake.style.left = `${e.clientX}px`;
-      flake.style.top = `${e.clientY}px`;
       flake.textContent = '❄️';
+
+      const size = Math.random() * 10 + 10;
+      flake.style.fontSize = size + 'px';
+
+      const startX = Math.random() * window.innerWidth;
+      flake.style.left = startX + 'px';
+      flake.style.top = '-20px';
 
       document.body.appendChild(flake);
 
+      let y = -20;
+      const xSpeed = (mouseX - startX) / 300 + (Math.random() - 0.5);
+      let x = startX;
+
       const fall = setInterval(() => {
-        const top = parseInt(flake.style.top || 0);
-        flake.style.top = `${top + 2}px`;
-        if (top > window.innerHeight) {
-          clearInterval(fall);
+        y += 1.5;
+        x += xSpeed;
+        flake.style.top = y + 'px';
+        flake.style.left = x + 'px';
+
+        if (y > window.innerHeight + 20) {
           flake.remove();
+          clearInterval(fall);
         }
       }, 16);
-    });
+    }
+
+    setInterval(createSnowflake, 150);
   </script>
 </body>
 </html>
