--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
   <title>YouTube Stats</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+
     html, body {
       margin: 0;
       padding: 0;
       overflow-x: hidden;
       background-color: #000;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-      color: #fff;
+      font-family: 'VT323', monospace;
+      color: #00ff99;
     }
 
     #welcome {
@@ -22,21 +24,31 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 2rem;
+      font-size: 3rem;
       z-index: 9999;
-      animation: fallAway 3.5s forwards ease-in-out;
+      animation: fallAway 3.5s forwards ease-in-out, flicker 2s infinite;
     }
 
     @keyframes fallAway {
       0% { opacity: 1; transform: translateY(0); }
-      80% { opacity: 0.8; transform: translateY(100px) rotateX(30deg) scale(0.95); }
-      100% { opacity: 0; transform: translateY(-200vh) rotateX(80deg) scale(0); display: none; }
+      100% { opacity: 0; transform: translateY(-200vh) scale(0); display: none; }
+    }
+
+    @keyframes flicker {
+      0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% {
+        opacity: 1;
+      }
+      20%, 22%, 24%, 55% {
+        opacity: 0.4;
+      }
     }
 
     h1 {
       text-align: center;
       margin: 2rem 0 1rem;
-      font-size: 2.5rem;
+      font-size: 3rem;
+      animation: flicker 2.5s infinite;
+      text-shadow: 0 0 4px #0f0, 0 0 10px #0f0;
     }
 
     #stats {
@@ -46,23 +58,23 @@
       padding: 2rem;
       border-radius: 16px;
       text-align: center;
-      position: relative;
-      box-shadow: 0 0 20px #007aff88;
-      animation: glowBorder 6s linear infinite;
+      box-shadow: 0 0 20px #00ff88;
+      animation: glowBorder 6s linear infinite, flicker 3s infinite;
     }
 
     @keyframes glowBorder {
-      0% { box-shadow: 0 0 15px #007aff88; }
-      50% { box-shadow: 0 0 30px #007aff; }
-      100% { box-shadow: 0 0 15px #007aff88; }
+      0% { box-shadow: 0 0 15px #00ff88; }
+      50% { box-shadow: 0 0 30px #00ffaa; }
+      100% { box-shadow: 0 0 15px #00ff88; }
     }
 
     #stats p {
       margin: 1rem 0;
+      text-shadow: 0 0 3px #00ffcc;
     }
 
     .goal {
-      color: #00c3ff;
+      color: #00ffaa;
       font-style: italic;
     }
 
@@ -76,32 +88,18 @@
 
     button {
       padding: 0.6rem 1.5rem;
-      font-size: 1rem;
-      border-radius: 12px;
-      border: none;
-      cursor: pointer;
-      font-weight: 600;
-      transition: all 0.3s ease;
-    }
-
-    #refreshBtn {
-      background-color: #007aff;
-      color: white;
-    }
-
-    #refreshBtn:hover {
-      background-color: #005bb5;
-    }
-
-    #channelLinkBtn {
+      font-size: 1.5rem;
+      border-radius: 8px;
+      border: 1px solid #00ffaa;
       background: transparent;
-      border: 2px solid #007aff;
-      color: #007aff;
+      color: #00ffaa;
+      cursor: pointer;
+      font-family: 'VT323', monospace;
+      text-shadow: 0 0 4px #00ffaa;
     }
 
-    #channelLinkBtn:hover {
-      background-color: #007aff;
-      color: white;
+    button:hover {
+      background: #00ffaa22;
     }
 
     #videos {
@@ -124,9 +122,10 @@
       position: fixed;
       right: 1rem;
       bottom: 1rem;
-      font-size: 0.9rem;
+      font-size: 1rem;
       color: red;
       z-index: 10;
+      text-shadow: 0 0 3px red;
     }
 
     .snowflake {
@@ -150,8 +149,8 @@
     <p><strong>Views:</strong> <span id="viewCount">...</span></p>
     <p class="goal" id="goalText"></p>
     <div class="buttons">
-      <button id="refreshBtn">Aktualisieren</button>
-      <button id="channelLinkBtn">Zum Kanal</button>
+      <button id="refreshBtn">↻ Aktualisieren</button>
+      <button id="channelLinkBtn">🔗 Zum Kanal</button>
     </div>
   </div>
 
