--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </div>
   </div>
   <div id="videos"></div>
-  <footer>developed by Jakob</footer>
+  <footer>developed financed by  Bradfords</footer>
 
   <script>
     document.addEventListener('DOMContentLoaded', () => {
